# refactored-computing-machine

./: .gitignore  CMakeLists.txt  FORMULATIONS.md  README.md
ejer1/: prog1.c
ejer2/: prog2.c  prog2.h
ejer3/: prog3.c  prog3.h
ejer4/: prog4.c
ejer5/: prog5.c
ejer7/: prog7.c
